- Change default search and display filters from 1 week to 6 months - Add more filter age options